--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,19 @@
     ],
     "routes": [
         {
-            "src": "/.*",
-            "dest": "index.js"
+            "src": "/(.*)",
+            "dest": "./index.js",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "PATCH",
+                "OPTIONS"
+            ],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 }
